@startuml SelectionLayerDependenicies

package "SelectFacePlugin"{
    class SelectFaceCallBack
    class SelectFaceCommand
    class FaceSelectionTool
}

package "DeselectFacePlugin"{
    class DeslectFaceCallBack
    class DeslectFaceCommand
    class FaceDeselectionTool
}

package "SelectMeshPlugin"{
    class SelectMeshCallBack
    class SelectMeshCommand
    class MeshSelectionTool
}

class SelectionLayer
SelectionLayer --> SelectFacePlugin
SelectionLayer --> DeselectFacePlugin
SelectionLayer --> SelectMeshPlugin

@enduml